# ThermalNetwork

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  documentation_site.yml  flake8.yml  format_and_lint.yml  install.yml  mkdocs.yml  on_demand.yml  pypi_release.yml  release.yml  tests.yml
demos/: building_loads.csv  demo_1.json  demo_2.json  example_project_combine_GHE.json  example_project_combine_GHE_2.json
demos/sdk_output_skeleton/: example_project_combine_GHE.json  example_project_combine_GHE_2.json  example_project_with_ghe.json
demos/sdk_output_skeleton/run/baseline_15min/ghe_dir/: system_params_ghe.json
demos/sdk_output_skeleton/run/baseline_scenario/10/021_export_modelica_loads/: modelica.mos
demos/sdk_output_skeleton/run/baseline_scenario/9/015_export_modelica_loads/: building_loads.csv
demos/sdk_output_skeleton/run/baseline_scenario/ghe_dir/: system_parameter.json  system_parameter_upstream.json
demos/sdk_output_skeleton_13_buildings/: exportGeo.json  network.geojson
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/1/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/10/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/11/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/12/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/13/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/2/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/3/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/4/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/5/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/6/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/7/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/8/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/9/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_13_buildings/run/baseline_scenario/ghe_dir/: sys_params_proportional.json  sys_params_upstream.json
demos/sdk_output_skeleton_1_ghe/: network.geojson  system_params.json
demos/sdk_output_skeleton_1_ghe/run/baseline_scenario/8/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_1_ghe/run/baseline_scenario/9/022_export_modelica_loads/: building_loads.csv  modelica.mos
demos/sdk_output_skeleton_1_ghe/run/baseline_scenario/ghe_dir/: _loop_order.json  sys_params.json  sys_params_autosizing.json  sys_params_detailed_geo.json  sys_params_detailed_geometry.json  sys_params_pre_designed.json  sys_params_rowwise.json
demos/sdk_output_skeleton_2/: system_parameter_singleGHE.json
demos/sdk_output_skeleton_2/run/baseline_scenario/8/022_export_modelica_loads/: modelica.mos
demos/sdk_output_skeleton_2/run/baseline_scenario/9/022_export_modelica_loads/: building_loads.csv
demos/sdk_output_skeleton_2/run/baseline_scenario/ghe_dir/: system_parameter.json
demos/sdk_output_skeleton_2_ghe/run/: 2_ghe_sequential.geojson
demos/sdk_output_skeleton_2_ghe/run/baseline_scenario/8/021_export_modelica_loads/: building_loads.csv
demos/sdk_output_skeleton_2_ghe/run/baseline_scenario/ghe_dir/: sys_params_2_ghe_birectangles.json  sys_params_2_ghe_bizoned_and_near_square.json  sys_params_2_ghe_pre_designed.json  sys_params_2_ghe_sequential.json  sys_params_2_ghe_staggered.json
demos/sdk_output_skeleton_2_ghe_pre_designed/run/baseline_scenario/9/021_export_modelica_loads/: building_loads.csv
demos/sdk_output_skeleton_2_ghe_pre_designed/run/baseline_scenario/ghe_dir/: sys_params.json  sys_params_pre_designed.json
demos/sdk_output_skeleton_2_ghe_sequential/: network.geojson
demos/sdk_output_skeleton_2_ghe_sequential/run/baseline_scenario/ghe_dir/: _loop_order.json  sys_params.json  sys_params_upstream.json
demos/sdk_output_skeleton_2_ghe_staggered/: example_project_with_ghe_2.json  network.geojson
demos/sdk_output_skeleton_2_ghe_staggered/run/baseline_scenario/ghe_dir/: sys_params.json
demos/sdk_output_skeleton_3/run/baseline_scenario/ghe_dir/: system_parameter_ghe.json
demos/waste_heat_demo/: sys_params_waste_heat.json
docs/: _config.yml  _toc.yml  index.md  inputs.md  installation.md  outputs.md  usage.md
inputs/: index.html
installation/: index.html
outputs/: index.html
search/: search_index.json
tests/: test_base.py  test_ground_heat_exchanger.py  test_heat_pump.py  test_network.py
thermalnetwork/: __init__.py  base_component.py  dhw.py  energy_transfer_station.py  enums.py  fan.py  fluid.py  geometry.py  ground_heat_exchanger.py  heat_pump.py  network.py  pipe.py  projection.py  pump.py  utilities.py  validate.py  waste_heat_source.py
thermalnetwork/test_data/: sys_params_pre_designed.json
thermalnetwork/tests/: base.py  test_base.py  test_cli.py  test_energy_transfer_station.py  test_geometry.py  test_ground_heat_exchanger.py  test_heat_pump.py  test_network.py  test_pipe.py  test_projection.py  test_sys_params.py  test_utilities.py  test_waste_heat_source.py
topology/: final.ipynb
usage/: index.html
(+9 files in other folders)
