[build-system]
requires = [
    "setuptools >= 67",
    "setuptools_scm >= 8",
    "wheel",
]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "ThermalNetwork"
dynamic = [
    "readme",
    "version",
    ]
authors = [
  { name="Matt Mitchell", email="mitchute@gmail.com" },
  { name="Nathan Moore", email="nathan.moore@nrel.gov" },
]
description = "A thermal network solver for GHE sizing."
requires-python = ">=3.9,<3.13"
classifiers = [
        "Development Status :: 4 - Beta",
        "Topic :: Scientific/Engineering",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
dependencies = [
  'click ~= 8.1',
  'ghedesigner ~= 1.5',
  'pandas ~= 2.0',
  "rich ~= 13.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 6.0",
    "pytest-cov ~= 5.0",
    "pre-commit ~= 3.7",
    "jupyterlab ~= 4.0",
    "mkdocs-material ~= 9.5"
]

[project.urls]
"Homepage" = "https://github.com/NREL/ThermalNetwork"
"Bug Tracker" = "https://github.com/NREL/ThermalNetwork/issues"

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools.packages.find]
# Must include a MANIFEST.in file in our repo: https://setuptools.pypa.io/en/latest/userguide/datafiles.html

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

# https://setuptools-scm.readthedocs.io/
# Presence of this command tells it to find the version from GitHub
[tool.setuptools_scm]

# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "thermalnetwork/tests"
# Manually add these flags to `pytest` when running locally for coverage details.
addopts = ["--cov=thermalnetwork", "--cov-report=html"]

[project.scripts]
thermalnetwork = "thermalnetwork.network:run_sizer_from_cli"
